# 2021-05-06

./: .gitignore  README.md
exercises/01-testserver/: README.md
exercises/01-testserver/webportal/webportal/: settings.py  urls.py
exercises/02/: README.md
exercises/03/: README.md
exercises/04/: README.md
exercises/04/webportal/webportal/: settings.py
exercises/05/: README.md
exercises/05/webportal/requirements/: local.txt
exercises/07-pipenv/: README.md
exercises/07-pipenv/webportal/: Pipfile
exercises/08-poetry/: README.md
exercises/08-poetry/webportal/: pyproject.toml
