[tool.poetry]
name = "webportal"
version = "0.1.0"
description = ""
authors = ["afuetterer <fuetterh@posteo.de>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
